<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SecondoAndroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="textview">TextView</string>
    <string name="sendrequest">Send request</string>
    <string name="gui">Start Queries</string>
    <string name="restoredb">Restore DB</string>
    <string name="listobjects">List Objects</string>
    <string name="opendb">Open DB</string>
    <string name="deletedb">Delete DB</string>
    <string name="closedb">Close DB</string>
    <string name="nodata">No Data</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="query">Query Database</string>
    <string name="last">Last command</string>
    <string name="clear">C</string>
    <string name="next">Next command</string>

</resources>