<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="8dp"
    android:background="@color/white" >

    <EditText
        android:id="@+id/querystring"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|left"
        android:hint="@string/pleaseinsertquery"
        android:inputType="textMultiLine"
        android:lines="8"
        android:singleLine="false"
        android:background="@color/lightgrey"
        />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="top|right"
        >
        <Button 
            android:text="@string/sendrequest"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="send_request"
            />
        <Button
            android:text="@string/last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="last_command"
            />
        <Button
            android:text="@string/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="next_command"
            />
        <Button
            android:text="@string/clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clear_command"
            />
        
      </LinearLayout>
      <LinearLayout
          android:layout_width="fill_parent"
          android:layout_height="wrap_content"
          android:gravity="bottom"
          android:background="@color/white"
          android:orientation="vertical"
          
          >
	          <ScrollView
	              android:id="@+id/queryscrollview" 
	    	      android:layout_width="fill_parent"
    	    	  android:layout_height="wrap_content"
	          >
		      	<TextView
    		        android:layout_width="match_parent"
        		    android:layout_height="wrap_content"
					android:layout_weight="1.0"
					android:background="@color/white"
					android:id="@+id/queryresultstring"
					android:visibility="visible"
				/>
	      	</ScrollView>
   		<ListView
        android:id="@+id/queryresultlistview2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"/>
   		
      	</LinearLayout>
</LinearLayout>